# bpx-api-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile  release.toml  taplo.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
client/: Cargo.toml
client/src/: error.rs  lib.rs
client/src/routes/: account.rs  borrow_lend.rs  capital.rs  futures.rs  history.rs  markets.rs  mod.rs  order.rs  rfq.rs  trades.rs  user.rs  vault.rs
client/src/ws/: mod.rs
client/tests/: integration-tests.rs
examples/: Cargo.toml  README.md  justfile
rust/: Cargo.toml  README.md  justfile  rustfmt.toml
rust/.cargo/: audit.toml
rust/.github/workflows/: audit.yml  rust.yml
rust/client/: Cargo.toml  README.md
rust/client/src/: capital.rs  error.rs  lib.rs  markets.rs  order.rs  trades.rs  user.rs
rust/client/src/routes/: account.rs  borrow_lend.rs  capital.rs  futures.rs  history.rs  markets.rs  mod.rs  order.rs  rfq.rs  trades.rs  user.rs
rust/client/src/ws/: mod.rs
rust/example/: Cargo.toml  README.md  justfile
rust/examples/: Cargo.toml  README.md  justfile
rust/examples/src/: main.rs
rust/scripts/: release_types.sh
rust/types/: Cargo.toml
rust/types/src/: account.rs  borrow_lend.rs  capital.rs  fill.rs  futures.rs  history.rs  lib.rs  margin.rs  markets.rs  order.rs  rfq.rs  trade.rs  user.rs
types/: Cargo.toml
types/src/: account.rs  borrow_lend.rs  capital.rs  fill.rs  history.rs  lib.rs  margin.rs  markets.rs  order.rs  rfq.rs  trade.rs  user.rs  vault.rs
