[workspace]
members = ["client", "examples", "types"]
resolver = "2"

[workspace.package]
edition = "2024"
keywords = ["backpack", "exchange"]
license = "Apache-2.0"
publish = false
repository = "https://github.com/backpack-exchange/bpx-api-client"
version = "0.20.0"

[workspace.dependencies]
anyhow = "1"
base64ct = { version = "1", features = ["alloc"] }
chrono = { default-features = false, version = "0.4", features = ["serde"] }
clap = { version = "4.5" }
dotenv = "0.15"
ed25519-dalek = "2"
futures-util = { default-features = false, version = "0.3" }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "1.1.1"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-native-roots",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
