[package]
name = "bpx-api-client"
description = "Backpack Exchange API client"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
release = true

[dependencies]
base64ct = { workspace = true }
bpx-api-types = { path = "../types", version = "0.17.4" }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Optional dependencies
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

[features]
default = []
ws = ["futures-util", "tokio", "tokio-tungstenite"]
integration-tests = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
