[package]
name = "bpx-api-examples"
description = "Backpack Exchange API examples"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
bpx-api-client = { path = "../client", version = "0.10.5", features = ["ws"] }
bpx-api-types = { path = "../types", version = "0.10.5" }
dotenv = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "account"
path = "src/bin/account.rs"

[[bin]]
name = "markets"
path = "src/bin/markets.rs"

[[bin]]
name = "orders"
path = "src/bin/orders.rs"

[[bin]]
name = "rfq"
path = "src/bin/rfq.rs"
