[workspace]
members = ["client", "examples", "types"]
resolver = "2"

[workspace.package]
keywords = ["backpack", "exchange"]
repository = "https://github.com/backpack-exchange/bpx-api-client"

[workspace.dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
chrono = { default-features = false, version = "0.4.38", features = ["serde"] }
ed25519-dalek = "2.1.1"
futures-util = { default-features = false, version = "0.3.31" }
reqwest = { version = "0.12.5", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.35.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.40"
