[workspace]
members = ["client", "examples", "types"]
resolver = "2"

[workspace.package]
keywords = ["backpack", "exchange"]
repository = "https://github.com/backpack-exchange/bpx-api-client"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { default-features = false, version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
futures-util = { default-features = false, version = "0.3" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rust_decimal = "1.37"
rust_decimal_macros = "1.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.45", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
