[package]
name = "bpx-api-client"
license = "Apache-2.0"
edition = "2021"
description = "Backpack Exchange client"
repository = "https://github.com/backpack-exchange/bpx-api-client"

[dependencies]
base64 = { workspace = true }
bpx-api-types = { path = "../types" }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
