[package]
name = "bpx-api-client"
version = "0.7.0"
license = "Apache-2.0"
edition = "2021"
description = "Backpack Exchange API client"
repository = "https://github.com/backpack-exchange/bpx-api-client"

[dependencies]
base64 = { workspace = true }
bpx-api-types = { path = "../types", version = "0.7.0" }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Dependencies for the `ws` feature
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[features]
default = []
ws = ["tokio", "tokio-tungstenite", "futures-util"]
