[package]
name = "bpx-api-examples"
description = "Backpack Exchange API examples"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bpx-api-client = { path = "../client", features = ["ws"] }
bpx-api-types = { path = "../types" }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "markets"
path = "src/bin/markets.rs"

[[bin]]
name = "orders"
path = "src/bin/orders.rs"

[[bin]]
name = "rfq"
path = "src/bin/rfq.rs"
