[package]
name = "bpx-api-types"
version = "0.6.2"
license = "Apache-2.0"
edition = "2021"
description = "Backpack Exchange API types"
repository = "https://github.com/backpack-exchange/bpx-api-client"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true, features = ["serde"] }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json.workspace = true
