[package]
name = "bpx-api-types"
description = "Backpack Exchange API types"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true, features = ["serde"] }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }
